update heading font sizing to address clamp() issues on Safari mobile

--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -80,24 +80,52 @@ body, h1, h2, h3 {
 
 }
 
+h1, h2, h3 {
+
+  margin: 1rem 0;
+  line-height: 1.25;
+
+}
+
 h1 {
 
-  font-size: clamp(3.052rem, 4vw, 3.815rem);
-  margin: 1rem 0;
+  font-size: 3.052rem;
 
 }
 
 h2 {
 
-  font-size: clamp(2.441rem, 4vw, 3.052rem);
-  margin: 1rem 0;
+  font-size: 2.441rem;
 
 }
 
 h3 {
 
-  font-size: clamp(1.953rem, 4vw, 2.441rem);
-  margin: 1rem 0;
+  font-size: 1.953rem;
+
+}
+
+@media (min-width: $breakpoint-sm) {
+
+  /* Temporary fix to clamp() not working on smaller screens in Safari */
+
+  h1 {
+
+    font-size: clamp(3.052rem, 4vw, 3.815rem);
+
+  }
+
+  h2 {
+
+    font-size: clamp(2.441rem, 4vw, 3.052rem);
+
+  }
+
+  h3 {
+
+    font-size: clamp(1.953rem, 4vw, 2.441rem);
+
+  }
 
 }
 
@@ -107,25 +135,9 @@ h3 {
   font-family: $body-font;
   color: $dark-gray;
 
-  h1 {
+  h1, h2, h3 {
 
     font-family: $heading-font;
-    line-height: 1.25;
-
-  }
-
-  h2 {
-
-    font-family: $heading-font;
-    color: $sand;
-    line-height: 1.25;
-
-  }
-
-  h3 {
-
-    font-family: $heading-font;
-    line-height: 1.25;
 
   }
 
